# BioHackathon

./: README.md
JSON schema validation with ontologies/: README.md
data/05-CSPARQL-bioRxiv/src/: .gitignore  README.md  asterix.lighttpd.conf.template  asterix.scgi  config.yaml  main.py  pyproject.toml  twitter_credentials.json.example
data/05-CSPARQL-bioRxiv/src/ontology_handler/: __init__.py  operators.py
data/05-CSPARQL-bioRxiv/src/publication_fetcher/: TwitterStream.py  twitter_stream.py
data/05-CSPARQL-bioRxiv/src/publication_parser/: SemanticPublication.py  __init__.py  semantic_publication.py
data/05-CSPARQL-bioRxiv/src/publication_parser/extractors/: __init__.py  base_extractor.py  biorxiv_extractor.py  dummy_extractor.py  edam_extractor.py
data/05-CSPARQL-bioRxiv/src/publication_parser/extractors/edam_files/: sample_edam_response.json  sample_input.json
data/05-CSPARQL-bioRxiv/src/web_server/: package-lock.json  package.json  run.py  sparql_wrapper.py
data/05-CSPARQL-bioRxiv/src/web_server/src/: App.js  Builder.js  Bundler.js  entry.js
data/05-CSPARQL-bioRxiv/src/web_server/static/: styles.css
data/05-CSPARQL-bioRxiv/src/web_server/templates/: index.html
data/C-SPARQL powered querying pipeline of bioRxiv publications/src/: README.md  pyproject.toml
data/C-SPARQL powered querying pipeline of bioRxiv publications/src/ontology_handler/: operators.py
data/C-SPARQL powered querying pipeline of bioRxiv publications/src/publication_fetcher/: TwitterStream.py
data/C-SPARQL powered querying pipeline of bioRxiv publications/src/web_server/: run.py
(+223 files in other folders)
